reader-changes